<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PickUp</string>
    <string name="app_id">262521600615048</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Edit Your Personal Info</string>
    <string name="title_fb_login">Facebook Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="preferences">pickup_prefs</string>
    <string name="title_activity_chat">Chat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="extra_start_coord">start</string>
    <string name="extra_end_coord">end</string>

    <!-- profile tags -->

    <string name="profile_tag_name">Name</string>
    <string name="profile_tag_company">Company</string>
    <string name="profile_tag_number">Number</string>
    <string name="profile_tag_age">Age</string>
    <string name="profile_tag_gender">Gender</string>
    <string name="profile_tag_home">Home</string>
    <string name="profile_tag_office">Office</string>
    <string name="profile_tag_fbid">fbid</string>
    <string name="profile_tag_email">Email</string>
    <string name="title_activity_book">Book A Ride</string>
    <string name="title_activity_journey">JourneyActivity</string>
    <string name="title_activity_ride">Pickup</string>
    <string name="title_activity_journey_log">JourneyLogActivity</string>
    <string name="title_activity_location_picker">LocationPickerActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_order_summary">OrderSummaryActivity</string>
    <string name="title_activity_profile">Profile Page</string>
    <string name="title_activity_history">History</string>


    <string name="settings_btn_text">Save</string>

    <!-- Other Strings used in App -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gps_not_found_message">Do you want to enable Location Services</string>
    <string name="gps_not_found_title">Location Services Disabled</string>

    <string name="edit_page_title">Enter your Personal Info</string>


    <!-- Error message -->
    <string name="empty_error">This field can\'t be empty</string>
    <string name="map_error">Map is not setup</string>

    <!-- Drawere messages -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="pickup_location">PICKUP</string>
    <string name="pickup_location_long">Pick a pickup location</string>
    <string name="drop_location">DROP</string>
    <string name="drop_location_long">Pick a drop location</string>
    <string name="current_location">CURRENT LOCATION</string>
    <string name="ride_now">RIDE NOW</string>
    <string name="ride_after">RIDE \n AFTER 30 MINUTE</string>
    <string name="confirm_ride">CONFIRM RIDE</string>
    <string name="confirm_distance_text">%1$.2f KM @ ₹6.00/- per KM</string>
    <string name="confirm_fare_text">Estimated Fare ₹%1$d.00</string>


    <string name="login_successful">Successfully logged in!!</string>

    <!-- Menu Strings -->
    <string name="side_menu_history">History</string>
    <string name="side_menu_profile">Profile</string>
    <string name="side_menu_settings">Settings</string>
    <string name="side_menu_payment">Payment</string>
    <string name="side_menu_share">Share</string>
    <string name="side_menu_speak">Write to Us</string>
    <string name="side_menu_rate">Rate</string>

    <string name="search">Search</string>
    <string name="type_to_search">Type here to search</string>

    <string name="mates_dialog_head">Mates (%1d)</string>

    <string name="title_cancelled">Cancelled</string>
    <string name="title_completed">Completed</string>

    <string name="fare_details">Fare Details</string>
    <string name="rupee_symbol">₹</string>
    <string name="base_fare_text">₹ 35 Base fare</string>
    <string name="sign_plus">+</string>

    <string name="final_fare_text">₹ Total Fare : <b>%1$d</b> for distance of %2$s km</string>

    <string name="searching_for_mates">Searching for mates..</string>
    <string name="no_users_with_you">No users with you</string>
    <string name="confirming_your_journey">Confirming your journey..</string>
    <string name="title_activity_rate">Ride Finished!!</string>

</resources>
