<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/head_text"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/fare_details"
        android:textColor="@color/text_color_dark"
        android:textSize="18sp"
        />

    <ImageView
        android:id="@+id/icon_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/head_text"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_cancel_black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:background="#ccc"
        android:layout_below="@+id/head_text"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/head_text"
        android:layout_marginTop="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textColor="@color/text_color_dark"
            android:text="@string/rupee_symbol"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:layout_marginTop="-5dp"
            android:layout_gravity="center"
            android:textSize="35sp"
            android:id="@+id/fare_final"
            android:textColor="@color/text_color_dark" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="14sp"
                android:text="@string/base_fare_text"
                android:textColor="@color/text_color_dark"
                android:gravity="center" />'
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18sp"
                android:text="@string/sign_plus"
                android:textColor="@color/text_color_dark"
                android:gravity="center" />'
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="14sp"
                android:id="@+id/distance_fare"
                android:textColor="@color/text_color_dark"
                android:gravity="center"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Note: This is an estimate. The final fare will be displayed after journey"
            />
    </LinearLayout>

</RelativeLayout>